Correcting z-index issue w/ stream vs infopanels spacer.

--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ nav {
 	min-height: 2em;
 	padding: 0 0 0 10em;
 	vertical-align: middle;
-	z-index: 1;
+	z-index: 2;
 }
 
 #navmenu {
@@ -369,6 +369,7 @@ ul.notecards li + li {
 	margin-top: 80px;
 	position: absolute;
 	background: #fff;
+	z-index: 1;
 }
 
 #content #stream:before {
